# taphouse

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/brew/: actions.rs  api.rs  installed.rs  mod.rs  types.rs
src/ui/: debug.rs  detail.rs  dialog.rs  mod.rs  package_list.rs  render.rs  tabs.rs
