[package]
name = "taphouse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taphouse"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6"
futures = "0.3"
